examples/tests/valid/benchmarks/jsii_big.w
bring "@cdktf/provider-aws" as aws;