examples/tests/invalid/cyclic_bring3.w
bring "./cyclic_bring1.w" as foo;
